--- a/gtpb_clientside/resources/reports/filtering_help.htm
+++ b/gtpb_clientside/resources/reports/filtering_help.htm
@@ -1,8 +1,8 @@
 Filtering options
 <table border="0" class="filterhelp">
 <tr>
-<td><i>filtertext</i></td><td>records starting with ...</td></tr>
-<tr><td><i><b>*</b>filtertext</i></td><td>records containing ...</td></tr>
+<td><i>filtertext</i></td><td>records containing ...</td></tr>
+<tr><td><i><b>:</b>filtertext</i></td><td>records starting with ...</td></tr>
 <tr><td><i><b>!</b>filtertext</i></td><td>not starting with ...</td></tr>
 <tr><td><i><b>?</b></i></td><td>blank records</td></tr>
 <tr><td><i><b>!?</b></i></td><td>non-blank records</td></tr>
