Remove company browser tab configs, obsolete

--- a/gtpb_clientside/website/login_error.htm
+++ b/gtpb_clientside/website/login_error.htm
@@ -23,7 +23,8 @@
     <link rel="icon" href="/agileBase/website/gtpb.ico" type="image/x-icon"> <!-- favicon --> 
     <style>
       h1 {
-        font-family: tahoma,arial,sans-serif;
+        font-family: Verdana,Arial,sans-serif;
+        font-size-adjust: 0.58;
         text-align: center;
       }
       
@@ -36,8 +37,8 @@
     </style>
   </head>
 <body>
-<a href="/agileBase/AppController.servlet?return=gui/load_tabs"><img border="0" src="/agileBase/website/images/disallowed.png"></a><br>
-<h1>Login failed, please <a href="/agileBase/AppController.servlet?return=gui/load_tabs">try again</a></h1>
+<a href="/agileBase/AppController.servlet?return=boot"><img border="0" src="/agileBase/website/images/disallowed.png"></a><br>
+<h1>Login failed, please <a href="/agileBase/AppController.servlet?return=boot">try again</a></h1>
 
 </body>
 </html>
